--- a/Project2-Disasters-data1001.qmd
+++ b/Project2-Disasters-data1001.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Identifying Optimal Locations to provide Affordable Insurance"
-author: "SID 541032306"
+author: "Aswin"
 format: 
   html:
     theme: cyborg
